# esp_lighting_control

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  application_main.c  common_struct.h
main/misc/: control_led_form.html  resp.html  style.css
main/modules/: auto_control.c  control_line.c  dynamic_illumination.c  led_control.c  web_server.c  wifi_control.c
main/modules/headers/: auto_control.h
